--- a/src/KeepUp/packages/businessComponents/slidePanel/index.module.scss
+++ b/src/KeepUp/packages/businessComponents/slidePanel/index.module.scss
@@ -1,5 +1,5 @@
 .container {
-  width: fit-content;
+  width: 100%;
   height: 100%;
   position: absolute;
   bottom: 0;
@@ -7,7 +7,14 @@
   z-index: 9;
   transition-duration: 0.3s;
   transition-property: all;
-  background-color: #fff;
+  background-color: transparent;
+  .inner {
+    width: fit-content;
+    height: 100%;
+    padding: 16px;
+    box-sizing: border-box;
+    background-color: #fff;
+  }
 }
 .shadowRight {
   box-shadow: 0 5px 5px 0 #eee;
